* Update tests using Kafka/8.1 * Remove lang-3 dependency completely * Format changes

--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,13 @@
                 <version>${spotless.version}</version>
                 <configuration>
                     <java>
-                        <removeUnusedImports />
+                        <eclipse>
+                            <file>${project.basedir}/formatter.xml</file>
+                        </eclipse>
+
+                        <!-- Optional: Add other formatters and linters -->
+                        <removeUnusedImports/>
+                        <formatAnnotations/>
                     </java>
                 </configuration>
             </plugin>
